--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     --icon-color: #AFB1B8;
     --footer-icon-color: rgba(255, 255, 255, 0.1);
     --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
-    --transformationt-time: +250ms;
+    --transformationt-time: 1250ms;
 }
 html {
 	box-sizing: border-box;
@@ -296,7 +296,7 @@ display: flex;
     margin-bottom: 10px;
   }
 
-.what-we-do {
+.what-we-do .conteiner {
     padding-bottom: 94px;
 }
 
@@ -323,7 +323,6 @@ display: flex;
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
-text-align: center;
 text-transform: uppercase;
 color: var(--hero-text-color);
 margin: 0;
@@ -334,9 +333,12 @@ position: absolute;
 bottom: 0;
 right: 0;
 left: 0;
-
+height: 70px;
+display: flex;
+align-items: center;
+justify-content: center;
 background-color: var(--gradient-color);
-padding: 27px 0;
+
 
 }
 
@@ -372,7 +374,8 @@ padding: 27px 0;
     border-radius: 50%;
     width: 44px;
     height: 44px;
-    transition: background-color var(--transformationt-time) var(--cubic-bezier);
+    transition: background-color var(--transformationt-time) var(--cubic-bezier),
+    fill var(--transformationt-time) var(--cubic-bezier);
 }
 
 .social-icons-link:hover,
@@ -588,6 +591,7 @@ box-shadow var(--transformationt-time) var(--cubic-bezier) ;
 font-weight: 400;
 font-size: 18px;
 line-height: 1.56;
+color: var(--hero-text-color);
 }
 
 .card-tomb {
@@ -609,9 +613,11 @@ line-height: 1.56;
     
 }
 
-.card-link:hover .card-overlay {
+.card-link:hover .card-overlay,
+.card-link:focus .card-overlay {
  transform: translateY(-100%);
 }
+
 
 .work-examples {
     padding-top: 94px;
@@ -652,7 +658,7 @@ line-height: 1.56;
  .card-link:hover  .card-body,
  .card-link:focus  .card-body {
     box-shadow: 0px 1px 1px 
-    rgba(0, 0, 0, 0.12), 
+    #0000001f, 
     0px 4px 4px rgba(0, 0, 0, 0.06),
      1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -674,7 +680,6 @@ line-height: 1.56;
 
 .backdrop.is-hidden {
 opacity: 0;
-visibility: hidden;
 pointer-events: none;
 }
 
