--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,7 @@ height: 70px;
 display: flex;
 align-items: center;
 justify-content: center;
-background-color: var(--gradient-color);
+background-color: rgba(47, 48, 58, 0.8);;
 
 
 }
